--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -2,6 +2,6 @@
 <resources>
 
     <string name="hello">Hello World, IBistuGapActivity!</string>
-    <string name="app_name">IBistuGap</string>
+    <string name="app_name">iBistuGap</string>
 
 </resources>
